--- a/efpodsanalyzer/EFPADiagram/index.html
+++ b/efpodsanalyzer/EFPADiagram/index.html
@@ -41,8 +41,9 @@
         }
         graph.nodes.forEach(function(node) {
             node.itemStyle = null;
-            node.symbolSize = 12;
             node.value = node.symbolSize;
+            node.symbolSize = 14;
+            //console.log(node.symbolSize);
             node.category = node.attributes.modularity_class;
             // Use random x, y
             node.x = node.y = null;
