feat: optimize display effect

--- a/efpodsanalyzer/EFPADiagram/graph_force.html
+++ b/efpodsanalyzer/EFPADiagram/graph_force.html
@@ -73,13 +73,13 @@
             categories: categories,
             roam: true,
             label: {
-                normal: {
-                    position: 'right'
-                }
+                show: true, // pod name always display
+                position: 'right'
             },
             force: {
                 repulsion: 100
-            }
+            },
+            edgeSymbol: ['none', 'arrow'] // display dependency arrow
         }]
     };
 
